--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -703,6 +703,7 @@
           <div class="col-md-6">
             <!-- TerraMA² Functions Buttons -->
             <terrama2-analysis-helpers operators="ctrl.operators.utilities" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers ng-if="ctrl.operators.attributes.data && ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.attributes" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>            
             <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.dcp" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.grid_monitored" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.grid" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
