adding project_id to registers

--- a/webapp/views/configuration/dataset.html
+++ b/webapp/views/configuration/dataset.html
@@ -120,6 +120,7 @@
     }
 
     var configuration = {
+      project: "{[ activeProject.name ]}",
       dataSeries: {[ dataSeries|json|safe ]},
       collector: {[ collector|json|safe ]},
       parametersData: {[ parametersData|json|safe ]},
