--- a/webapp/views/administration/service.html
+++ b/webapp/views/administration/service.html
@@ -60,6 +60,22 @@
                   </li>
                 </ul>
               </li>
+
+              <li class="terrama2-list-error" ng-show="ctrl.service.service_type_id == 4">
+                <i ng-show="ctrl.mailConnection.message" class="fa fa-caret-right"></i> <label ng-bind="i18n.__('Email Server Connection')" class="tree-toogler nav-header"></label>
+
+                <span ng-if="ctrl.mailConnection.isLoading" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+                <span ng-if="!ctrl.mailConnection.isLoading && ctrl.mailConnection.isValid"
+                      class="glyphicon glyphicon-ok">
+                </span>
+                <span ng-if="!ctrl.mailConnection.isLoading && !ctrl.mailConnection.isValid" class="glyphicon glyphicon-remove"></span>
+
+                <ul class="nav nav-list tree">
+                  <li ng-show="!ctrl.mailConnection.isValid && ctrl.mailConnection.message">
+                    <span ng-bind="ctrl.mailConnection.message"></span>
+                  </li>
+                </ul>
+              </li>
             </ul>
           </div>
         </terrama2-alert-box2>
@@ -538,8 +554,8 @@
 
     <div class="box-footer">
       <button type="submit" class="btn btn-primary pull-right" id="serviceSaveButton" data-ng-click="ctrl.save()" style="margin-left: 10px;">{{ i18n.__("Save") }}</button>
-      <button type="submit" class="btn btn-primary pull-right"  style="margin-left: 10px; width: 135px;" ng-click="ctrl.checkConnection()">
-        <span class="loading" ng-show="ctrl.ssh.isLoading || ctrl.db.isLoading" style="display: none;"><i class="fa fa-refresh fa-spin"></i></span>
+      <button type="submit" class="btn btn-primary pull-right"  style="margin-left: 10px;" ng-click="ctrl.checkConnection()" ng-disabled="ctrl.ssh.isLoading || ctrl.db.isLoading || ctrl.mailConnection.isLoading">
+        <span class="loading" ng-show="ctrl.ssh.isLoading || ctrl.db.isLoading || ctrl.mailConnection.isLoading" style="margin-right: 5px;"><i class="fa fa-refresh fa-spin"></i></span>
         <span class="text">{{ i18n.__("Check Connection") }}</span>
       </button>
       <a ng-href="/administration/services" class="btn btn-primary pull-left" id="serviceCancelButton">{{ i18n.__("Cancel") }}</a>
