--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -686,7 +686,7 @@
               <div id="scriptCheckResult"></div>
               <div id="systemError" style="display: none;"></div>
 
-              <div terrama2-ace="{}" name="script" ng-model="ctrl.analysis.script">
+              <div terrama2-ace="{}" name="script" ng-model="ctrl.analysis.script" new-value="ctrl.operatorValue">
 
               </div>
 
@@ -702,15 +702,15 @@
 
           <div class="col-md-6">
             <!-- TerraMA² Functions Buttons -->
-            <terrama2-analysis-helpers operators="ctrl.operators.utilities" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
-            <terrama2-analysis-helpers ng-if="ctrl.operators.attributes.data && ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.attributes" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>            
-            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.dcp" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
-            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.grid_monitored" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
-            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.grid" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
-            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.historical" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
-            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.forecast" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
-            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.occurrence" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
-            <terrama2-analysis-helpers operators="ctrl.operators.python" target="ctrl.analysis.script" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers operators="ctrl.operators.utilities" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers ng-if="ctrl.operators.attributes.data && ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.attributes" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>            
+            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.dcp" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.grid_monitored" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.grid" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.historical" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.forecast" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.occurrence" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers operators="ctrl.operators.python" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
           </div>
         </div>
       </div>
