--- a/webapp/views/administration/services.html
+++ b/webapp/views/administration/services.html
@@ -26,6 +26,10 @@
 </script>
 <!-- Socket.io -->
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="/bower_components/moment/moment.js"></script>
+<script type="text/javascript" src="/bower_components/moment/locale/pt-br.js"></script>
+<script type="text/javascript" src="/bower_components/moment/locale/es.js"></script>
+<script type="text/javascript" src="/bower_components/moment/locale/fr.js"></script>
 
 {% endblock %}
 
