--- a/webapp/public/javascripts/angular/table/templates/table.html
+++ b/webapp/public/javascripts/angular/table/templates/table.html
@@ -19,6 +19,24 @@
       </div>
     </div>
 
+    <!-- Info Modal -->
+    <div ng-if="extra.service && extra.service.online" class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="infoModalLabel">
+      <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="infoModalLabel">{{ i18n.__('Service info') }}</h4>
+          </div>
+          <div class="modal-body">
+            {{ i18n.__('Are you sure?') }}
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-outline" data-dismiss="modal" ng-click="">{{ i18n.__('Close') }}</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="col-md-12">
       <div class="col-md-8 col-xs-12">
         <div class="form-group">
