Fix analysis script area, fix function to get static grid icon, validate processing time to show to user

--- a/webapp/views/configuration/staticData.html
+++ b/webapp/views/configuration/staticData.html
@@ -23,8 +23,10 @@
    iconFn: function(object) {
      if (object.model_type === 'Grid') {
        return "/images/static-data-series/grid/grid.png";
-     } else {
+     } else if (object.model_type === "Geometric Object"){
       return "/images/static-data-series/vetorial/vetorial.png";
+     } else {
+       return "";
      }
 
    },
