Fix info column table

--- a/webapp/public/javascripts/angular/table/templates/table.html
+++ b/webapp/public/javascripts/angular/table/templates/table.html
@@ -128,7 +128,7 @@
             </button>
           </td>
 
-          <td>
+          <td ng-if="extra.service">
             <button ng-show="element.online" ng-click="showInfo(element)" class="btn btn-default btn-sm pull-right"> 
               <i class="fa fa-info"></i>
             </button>
